# cordic_ip

./: .gitignore  Makefile  README.md
cpp/source/: CMakeLists.txt  ref_model.cpp
cpp_codes/: Makefile  convertion.txt  fixed_point_converter.cpp  main.cpp  print_table.cpp
rtl/: adder_sel.sv  barrel_shifter.sv  cordic.sv  cordic_fsm.sv  counter.sv  fsm_cordic.sv  mux.sv  reg_ena.sv  rom_cordic.sv  sum_sel.sv
tb/: cordic_if.sv  tb.sv  test.sv
